# Serendipity

./: CMakeLists.txt  README.md
docs/: design.md  代码规范1.0.md
docs/encode/: base64.md  hex.md
docs/encrypt/: tea.md
include/adt/: adt_pre_init.h  dynamic_array.h  list.h  queue.h
include/digest/: digest_pre_init.h  md4.h  md5.h  sha2.h
include/encode/: base64.h  encode_pre_init.h  hex.h  md4.h  md5.h  morse.h
include/encrypt/: encrypt_pre_init.h  pkcspad.h  rc4.h  sm4.h  tea.h
include/misc/: bf.h  bitwise_utils.h  endian.h
src/adt/: dynamic_array.c  link_list.c  list.c  queue.c
src/digest/: md4.c  md5.c  sha2.c
src/encode/: base64.c  hex.c  md4.c  md5.c  morse.c
src/encrypt/: pkcspad.c  rc4.c  sm4.c  tea.c
src/misc/bf_runner/: bf.c
test/Data-Structure/list_test/: CMakeLists.txt  main.c
test/Encoding/MD4/: CMakeLists.txt  main.c
test/Encoding/MD5/: CMakeLists.txt  main.c
test/Encoding/base64/: CMakeLists.txt  main.c
test/Encoding/hex/: CMakeLists.txt  main.c
test/Encoding/morse/: CMakeLists.txt  main.c
test/Encrypt/RC4/: CMakeLists.txt  main.c
test/Encrypt/SM4/: CMakeLists.txt  main.c
test/Encrypt/tea/: CMakeLists.txt  main.c
test/digest/MD4/: CMakeLists.txt  main.c
test/digest/MD5/: CMakeLists.txt  main.c
test/digest/SHA2/: CMakeLists.txt  main.c
test/misc/bf_runner/: CMakeLists.txt  bf_code.bf  main.c
